flightSchedule update
